force-app/main/default/objects/Employee_Training__c/fields/Employee_Email__c.field-meta.xml
<CustomField>
    <fullName>Employee_Email__c</fullName>
    <formula>Employee__r.Email__c</formula>
    <label>Employee Email</label>
    <type>Text</type>
</CustomField>