force-app/main/default/objects/Employee_Training__c/fields/Training_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Training_Schedule__c</fullName>
    <label>Training Schedule</label>
    <referenceTo>Training_Schedule__c</referenceTo>
    <relationshipLabel>Employee Trainings</relationshipLabel>
    <relationshipName>Employee_Trainings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>